syntax = "proto3";

package middleware;

import "proto/shared/session_types.proto";

option go_package = "evolvia/proto/middleware";

service MiddlewareService {
  rpc ProcessSession (shared.SessionData) returns (shared.SessionResponse);
}
